Implement website enhancements: fix trial badge visibility, distinguish checks/X's with colors, add breadcrumb navigation, improve mobile experience

--- a/website/pricing.html
+++ b/website/pricing.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/comparison-grid.css">
     <link rel="stylesheet" href="css/trial-badge.css">
     <link rel="stylesheet" href="css/pricing-fixes.css">
+    <link rel="stylesheet" href="css/breadcrumbs.css">
+    <link rel="stylesheet" href="css/mobile-enhancements.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,6 +44,15 @@
             </nav>
         </div>
     </header>
+
+    <!-- Breadcrumb Navigation -->
+    <section class="breadcrumbs">
+        <div class="container">
+            <div class="breadcrumbs-container">
+                <!-- Breadcrumbs will be inserted by JavaScript -->
+            </div>
+        </div>
+    </section>
 
     <!-- Pricing Hero Section -->
     <section class="page-hero">
@@ -585,6 +596,8 @@
     <script src="js/script.js"></script>
     <script src="js/comparison-grid.js"></script>
     <script src="js/pricing-toggle.js"></script>
+    <script src="js/breadcrumbs.js"></script>
+    <script src="js/mobile-menu.js"></script>
     <!-- Stripe.js and Checkout Integration -->
     <script src="https://js.stripe.com/v3/"></script>
     <script>
