--- a/website/contact.html
+++ b/website/contact.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/dark-mode.css">
     <link rel="stylesheet" href="css/faq.css">
+    <link rel="stylesheet" href="css/breadcrumbs.css">
+    <link rel="stylesheet" href="css/mobile-enhancements.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,6 +46,15 @@
             </nav>
         </div>
     </header>
+
+    <!-- Breadcrumb Navigation -->
+    <section class="breadcrumbs">
+        <div class="container">
+            <div class="breadcrumbs-container">
+                <!-- Breadcrumbs will be inserted by JavaScript -->
+            </div>
+        </div>
+    </section>
 
     <!-- Contact Hero Section -->
     <section class="page-hero">
@@ -284,6 +295,8 @@
     <script src="js/animations.js"></script>
     <script src="js/dark-mode.js"></script>
     <script src="js/form-validation.js"></script>
+    <script src="js/breadcrumbs.js"></script>
+    <script src="js/mobile-menu.js"></script>
     <script>
         // Add fade-in-up animations to elements
         document.addEventListener('DOMContentLoaded', function() {
