Fix multiple UI issues: How SolarBot Works section, Contact Us button, Features page text layout, 7-day trial banner, terminal text contrast, contact page toolbar

--- a/website/features.html
+++ b/website/features.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Features - SolarBot.io</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/features-page.css">
+    <link rel="stylesheet" href="css/dark-mode.css">
+    <link rel="stylesheet" href="css/breadcrumbs.css">
+    <link rel="stylesheet" href="css/mobile-enhancements.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,6 +43,15 @@
             </nav>
         </div>
     </header>
+
+    <!-- Breadcrumb Navigation -->
+    <section class="breadcrumbs">
+        <div class="container">
+            <div class="breadcrumbs-container">
+                <!-- Breadcrumbs will be inserted by JavaScript -->
+            </div>
+        </div>
+    </section>
 
     <!-- Features Hero Section -->
     <section class="page-hero">
@@ -350,5 +363,8 @@
     </footer>
 
     <script src="js/script.js"></script>
+    <script src="js/dark-mode.js"></script>
+    <script src="js/breadcrumbs.js"></script>
+    <script src="js/mobile-menu.js"></script>
 </body>
 </html>
