UI improvements: white background for contact page, removed blog picture placements, white contact support button, black documentation text, light gray footer for login/signup

--- a/website/contact.html
+++ b/website/contact.html
@@ -11,13 +11,14 @@
     <link rel="stylesheet" href="css/faq.css">
     <link rel="stylesheet" href="css/breadcrumbs.css">
     <link rel="stylesheet" href="css/mobile-enhancements.css">
+    <link rel="stylesheet" href="css/contact-page.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="description" content="Contact the SolarBot team for support, inquiries, or feedback about our Solana arbitrage trading bot.">
 </head>
-<body>
+<body class="contact-page">
     <!-- Header -->
     <header>
         <div class="container">
