Add static website for SolarBot

--- a/website/src/pages/signup.html
+++ b/website/src/pages/signup.html
@@ -50,9 +50,12 @@
         <div class="container">
             <div class="auth-container">
                 <div class="auth-form-container">
-                    <h2>Create Your Account</h2>
-                    <p>Join SolarBot today and start automating your Solana arbitrage trading.</p>
-
+                    <h2>Registration Closed</h2>
+                    <p style="font-size:1.2em; color:#888;">Registration is currently closed for the SolarBot soft launch.<br>
+                    Only invited users may log in at this time.<br>
+                    Please check back soon or contact support for access.</p>
+                    <a href="index.html" class="btn btn-primary" style="margin-top:2em;">Return to Homepage</a>
+                    <!--
                     <form id="signup-form" class="auth-form">
                         <div class="form-group">
                             <label for="name">Full Name</label>
