--- a/website/src/pages/signup-simple.html
+++ b/website/src/pages/signup-simple.html
@@ -48,9 +48,12 @@
         <div class="container">
             <div class="auth-container fade-in-up">
                 <div class="auth-form-container">
-                    <h1>Create Your Account</h1>
-                    <p>Get started with SolarBot and automate your Solana arbitrage trading.</p>
-
+                    <h1>Registration Closed</h1>
+                    <p style="font-size:1.1em; color:#888;">Registration is currently closed for the SolarBot soft launch.<br>
+                    Only invited users may log in at this time.<br>
+                    Please check back soon or contact support for access.</p>
+                    <a href="index-simple.html" class="btn btn-primary" style="margin-top:2em;">Return to Homepage</a>
+                    <!--
                     <form id="signup-form" class="auth-form fade-in-up delay-1">
                         <div class="form-group">
                             <label for="name">Full Name</label>
